fix spacing of secret talents page

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -118,6 +118,10 @@ a:hover {color:#560d32;}
   padding: 4px;
   width: 50%;
 }
+#talent-text {
+  padding-top: 20px;
+  width: 500px;
+}
 @media screen and (max-width: 800px) {
   .talents-nowrap {
     flex-wrap: wrap;
@@ -164,9 +168,8 @@ a:hover {color:#560d32;}
 .modal-content {
   display: block;
   margin: auto;
-  max-width: 700px;
   max-height: 75%;
-
+  max-width: 700px;
 }
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
 #caption {
